fix scrollbar OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -283,13 +283,12 @@ div.list {
 	justify-content: center;
 	align-items: center;
 	margin: auto;
-	position: absolute;
 	overflow: scroll;
 	overflow-x: hidden;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 
-	::-webkit-scrollbar {
+	list::-webkit-scrollbar {
 		display: none;
 	}
 
